<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10sp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/loginMail"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:hint="@string/enterMail"
            android:inputType="textEmailAddress"
            android:textColorHint="#888282"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:textColorHint="#888282"
            android:textSize="15sp"
            android:inputType="textPassword"
            />
        <TextView
            android:id="@+id/createAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dontHaveAccount"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:layout_marginTop="15sp"
            tools:ignore="SmallSp" />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginButton"
            android:layout_gravity="center"
            android:padding="15sp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="20sp"
            />
    </LinearLayout>



