<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:context=".Fragments.RegisterFragment">




    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/updateProfilePicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        tools:ignore="SmallSp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >
        <Button
            android:id="@+id/profileGalleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/gallery"
            android:textColor="@color/white"
            android:background="@color/gray_blue"
            android:layout_marginEnd="10dp"
            />
        <Button
            android:id="@+id/profileCameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/camera"
            android:textColor="@color/white"
            android:background="@color/gray_blue"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>

        <EditText
            android:id="@+id/nameUserUpdateProfile"
            android:layout_width="233dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/fullName"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="#888282"
            android:textSize="15sp"
            android:inputType="textPersonName"
            />



        <EditText
            android:id="@+id/mailUserUpdateProfile"
            android:layout_width="233dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="#888282"
            android:textSize="15sp"

            />


        <EditText
            android:id="@+id/PasswordUserUpdateProfile"
            android:layout_width="233dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="#888282"
            android:textSize="15sp"
            android:layout_marginTop="25dp"
            />




        <EditText
            android:id="@+id/updateProfileConfirmPassword"
            android:layout_width="233dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="#888282"
            android:textSize="15sp"
            android:layout_marginTop="25dp"
            />
        <!--            Buttons Layouts-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
        <Button
            android:id="@+id/updateProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveButton"
            android:textColor="@color/white"
            android:background="@color/gray_blue"
            android:layout_marginTop="10dp"
            tools:ignore="SmallSp" />
            <Button
                android:id="@+id/signOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/signOut"
                android:textColor="@color/white"
                android:background="@color/gray_blue"
                android:layout_marginTop="10dp"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>

